# ScratchLinkedList

./: .gitignore  CMakeLists.txt  README.md  classtemplate.cpp  exception.cpp  fcttemplate.cpp  file_1.txt  html.docx  main.cpp  namespace.cpp
scriptFiles/: CMakeLists.txt  LinkedList.cpp  LinkedList.hpp
